<resources>
    <string name="app_name">Viciados em filmes</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="img_content">text content</string>
    <string name="title_movie">Title</string>
    <string name="description" />
    <string name="title_activity_detalhe_filme">DetalheFilmeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="favorite">favorite</string>
</resources>
